--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 # jdbc.X
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ordercraftApp?useSSL=false&useTimezone=true&serverTimezone=UTC
+jdbc.url=jdbc:mysql://localhost:3306/springapp?useSSL=false&useTimezone=true&serverTimezone=UTC
 jdbc.user=root
 jdbc.pass=
 
